--- a/Dockerfile_ARMV8
+++ b/Dockerfile_ARMV8
@@ -7,7 +7,7 @@ RUN apt-get update && apt-get install -y systemd && apt-get clean
 ADD preinstall.sh /tmp/preinstall.sh
 
 RUN chmod +x /tmp/preinstall.sh
-RUN /tmp/./preinstall.sh && rm /tmp/preinstall.sh && apt-get clean && apt-get a$
+RUN /tmp/./preinstall.sh && rm /tmp/preinstall.sh && apt-get clean && apt-get autoclean
 
 ADD hack_scripts/hostfiles-hack.sh /usr/local/bin/
 ADD hack_scripts/hostfiles-hack.service /etc/systemd/system/
